RESOLVED FIXED259364
REGRESSION (iOS 17 Beta): The camera preview is with a wrong resolution for a short time when the iOS User enables/disables the camera
https://bugs.webkit.org/show_bug.cgi?id=259364
Summary REGRESSION (iOS 17 Beta): The camera preview is with a wrong resolution for a...
Madara Freimane
Reported 2023-07-20 13:46:28 PDT
Summary: The camera preview is with a wrong resolution for a short time when the iOS User enables/disables the camera OR joins a WebRTC call with video ON Tested devices: The bug is reproducible on: - iPhone 12 Pro (iOS 17.0 Public Beta) with Safari (V17.0) - iPhone 11 Pro Max (iOS 17 Public Beta, build: 21A5277j) and Safari - iPhone 11 Pro Max (iOS 17 Public Beta, build: 21A5277j) and Google Chrome (V115.0.5790.130) The bug is not reproducible on: - iPhone 13 (iOS 16.5.1) and Safari - iPhone 14 (iOS 16.5.1) and Safari - iPhone XS (iOS 16.4.1) and Safari Scenario: Precondition: Safari or Google Chrome browser opened on iOS 17 device Steps: Use case1: 1. iOS User joins WEbRTC call with video ON 2. iOS User observes local video preview while being in connecting state Use case2: 1. iOS User disables and enables camera back 2. iOS User observes the camera preview while changing the status of the camera Actual result: The camera preview is with a wrong resolution for a short time when the iOS User enables/disables the camera OR joins a call with video ON Expected result: The camera preview appears immediately with the correct resolution when the iOS User enables/disables the camera in a WebRTC call Reproducibility: 90% Additional information: -Sysdiagnostics file added: https://drive.google.com/file/d/1Z3IxXUjNdt4zWOubg4H52WrDGBXH3CGZ/view?usp=sharing (bug reproduced at 23:25, EET, 20.07.2023.)
Attachments
Radar WebKit Bug Importer
Comment 1 2023-07-20 14:45:54 PDT
Madara Freimane
Comment 2 2023-08-17 02:30:47 PDT
Bug is still reproducible. 3rd use case: iOS User rotates device screen, and observes the camera preview Tested devices and browsers: - iPhone 11 Pro (iOS 17 Developer Beta 6, build: 21A5312c) and Safari - iPhone 14 Pro (iOS 17 Public Beta 4, build: 21A5312c) and Safari - iPhone 13 (iOS 17 Public Beta 4, build: 21A5312c) and Safari Added a new sysdiagnostics file (bug reproduced at 12:13, EET, 17.08.2023.): https://drive.google.com/file/d/1_I6m42MmuqeB6iwS4Mglf8XpIvm5fbPz/view?usp=sharing
chris.pettet
Comment 3 2023-09-06 16:44:08 PDT
Still seeing this on iOS 17.0 (21A5326a), Safari. The getUserMedia sample linked below is an easy way to reproduce the bug. getUserMedia sample: https://webrtc.github.io/samples/src/content/getusermedia/gum/ getUserMedia source: https://github.com/webrtc/samples/tree/gh-pages/src/content/getusermedia/gum
youenn fablet
Comment 4 2023-09-22 01:21:05 PDT
rychouwei
Comment 5 2023-10-12 06:10:55 PDT
Hi, I have same issue here, I would like to know is this issue being fixed? And which iOS version will launch this fixed.
youenn fablet
Comment 6 2023-10-12 07:35:23 PDT
This is being investigated.
rychouwei
Comment 7 2023-10-12 20:10:36 PDT
Thank you for your response, is there any workaround here?
youenn fablet
Comment 8 2023-10-13 05:52:55 PDT
*** Bug 261330 has been marked as a duplicate of this bug. ***
youenn fablet
Comment 9 2023-11-10 02:50:41 PST
*** Bug 262618 has been marked as a duplicate of this bug. ***
EWS
Comment 10 2023-11-10 10:29:55 PST
Committed 270548@main (57afaa96431b): <https://commits.webkit.org/270548@main> Reviewed commits have been landed. Closing PR #18069 and removing active labels.
youenn fablet
Comment 11 2023-12-20 12:26:57 PST
*** Bug 266686 has been marked as a duplicate of this bug. ***
PhungDuong
Comment 12 2024-08-27 18:11:27 PDT
Dear @youenn fablet This issue still persists in iOS 17.6.1 Please reopen this issue.
PhungDuong
Comment 13 2024-10-31 20:17:04 PDT
Bug is still reproducible on iOS/iPad 18.1
PhungDuong
Comment 14 2024-11-21 22:44:51 PST
Bug is still reproducible on iOS/iPad 18.1.1 But only for camera of yourself, other camera is not. And the frequency is about 50%.
Ketija
Comment 15 2026-01-15 01:13:26 PST
Hi! Is there progress on the issue? Bug is still reproducible: Tested devices and browsers: - iPhone 11 ( iOS 26.2) and Safari - iPhone XR ( iOS 18.7.3) and Safari
Ketija
Comment 16 2026-03-12 00:04:36 PDT
Hi! Is there progress on the issue ? Bug is still reproducible: Tested devices and browsers: - iPhone 11 (iOS 26.3) and Safari - iPhone XR (iOS 18.7.3) and Safari
Note You need to log in before you can comment on or make changes to this bug.